fix horizontal scroll issue on modals and use infura to serve profile images

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -93,7 +93,7 @@
 }
 
 .footer {
-  margin: $xxl-spacing (-$l-spacing) 0;
+  margin: $xxl-spacing (-$m-spacing) 0;
   border-top: $base-border;
   text-align: right;
   padding: $l-spacing $l-spacing 0;
